--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
     <body>
 <center>
   
-  <h3>****Listen to the podcast episodes below or subscribe where ever you listen to podcasts****</h3>
+  <h2> Discussions, guest talks, and debates about SAP on Azure  </h2>
+  
+  If you'd like us to talk about any particular topic or have comments, questions, or feedback - get in touch at <b>connect[at]SAPonAzureTalk.com</b>
+
+  <b>Hosts</b>: <a href="https://linkedin.kashyap.one"> Ravi Kashyap </a> and <a href="https://nathan.saponazuretalk.com"> Nathan Weaver  </a>
+  
+  ****Listen to the podcast episodes below or subscribe where ever you listen to podcasts****
   
 <iframe src="https://embed.podcasts.apple.com/us/podcast/sap-on-azure-talk/id1557359410?itsct=podcast_box&amp;itscg=30200&amp;theme=auto" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation-by-user-activation" allow="autoplay *; encrypted-media *;" style="width: 100%; max-width: 660px; overflow: hidden; border-radius: 10px; background: transparent none repeat scroll 0% 0%;" height="450px" frameborder="0"></iframe>
 <br>
