--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <h1> SAP on Azure Talk </h1>
   <h2> Discussions, guest talks, and debates about SAP on Azure  </h2>
   <br>
+    <b>Hosts</b>: <a href="https://linkedin.kashyap.one"> Ravi Kashyap </a> and <a href="https://nathan.saponazuretalk.com"> Nathan Weaver  </a>
+  <br> <br>
   If you'd like us to talk about any particular topic or have comments, questions, or feedback - get in touch at <b>connect[at]SAPonAzureTalk.com</b>
-  <br>
+  <br><br>
   <b>Hosts</b>: <a href="https://linkedin.kashyap.one"> Ravi Kashyap </a> and <a href="https://nathan.saponazuretalk.com"> Nathan Weaver  </a>
   <br> <br>
   ****Listen to the podcast episodes below or subscribe where ever you listen to podcasts****
