--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-  <head> </head>
+  <head> <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+</head>
     <body>
 <center>
   <h1> SAP on Azure Talk </h1>
